--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "MTIwNjI2OTMzNzc4NzE3OTA2OA.GlBaZm.9zBTg6oiT6Tc_xusiTszWPHi6V0lYMK5-AFcE8",
+    "token": "",
     "prefix": "?",
     "ownerIDS": [
         "1107744228773220473"
